2014-03-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* filefuncs.c (read_symlink, do_fts): Replace free with gawk_free.
	* inplace.c (at_exit, do_inplace_end): Ditto.
	* readdir.c (dir_close): Ditto.
	* readfile.c (do_readfile): Ditto.
	* revtwoway.c (close_two_proc_data): Ditto.
	* rwarray (read_elem): Replace realloc with gawk_realloc.
	(read_value): Replace malloc and free with gawk_malloc and gawk_free.
	* testext.c (try_modify_environ): Replace free with gawk_free.

2014-02-12         John E. Malmberg      <wb8tyw@qsl.net>

	* time.c: Better hack for nanosleep bug based on feedback from HP.

2013-12-29         John E. Malmberg      <wb8tyw@qsl.net>

	* filefuncs.c: Fix compile on VMS.
	* time.c: Fix compile on VMS.

2013-12-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkfts.c: Wrap include of <sys/param.h> in HAVE_SYS_PARAM_H,
	as I should have done to start with.  For VMS.

2013-12-29         John E. Malmberg      <wb8tyw@qsl.net>

	* gawkdirfd.h: Adjust include for VMS.
	* filefuncs.c: Make it compile on VMS.
	* fnmatch.c: Make it compile on VMS.

2013-12-21         Mike Frysinger        <vapier@gentoo.org>

	* configure.ac: Remove MirBSD and OS/390 hack to create
	do-nothing Makefile. Should be handled by configure in the
	parent directory.

2013-12-21         Arnold D. Robbins     <arnold@skeeve.com>

	* configure, aclocal.m4: Updated to automake 1.13.4 and
	libtool 2.4.2.418.

2013-11-28         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (uninstall-so, uninstall-recursive): Remove the
	.so files. Keeps make distcheck happy.

2013-11-17  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (dist_man_MANS): Add inplace.3am.

2013-10-23  Michael Haubenwallner <michael.haubenwallner@salomon.at>

	Fix portability for AIX.

	* inplace.c (_XOPEN_SOURCE): Define when not defined yet.
	(_XOPEN_SOURCE_EXTENDED): Ditto. Needs to define a number.

2013-08-22         Arnold D. Robbins     <arnold@skeeve.com>
