@@ -1,3 +1,10 @@
+2014-03-23         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkfts.c (MAXPATHLEN): Add a default definition. Thanks to
+	Antonio Diaz Dian and Nelson H.F. Beebe.
+	* readdir.c (PATH_MAX): Add a default definition. Thanks to
+	Nelson H.F. Beebe.
+
 2014-03-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* filefuncs.c (read_symlink, do_fts): Replace free with gawk_free.
